Character movement added working on adding boundaries

--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
                     </div>
             </section>
     </header>
-        <main id="arena-container">
-            <canvas id="arena" width="1000" height="450" ></canvas>
-        </main>
+        <main id="arena-container"></main>
     <footer>
         <section id="credits-container">
             <h2 id="credit-text">Created by Anthony Ghilardi</h2>
