--- a/index.html
+++ b/index.html
@@ -15,12 +15,8 @@
                     <div>
                         <button>Start Game</button>
                     </div>
-                    <div id="timer">
-                        <span>Time Remaining: 60 seconds</span>
-                    </div>
-                    <div id="score-counter">
-                        
-                    </div>
+                    <div id="timer"></div>
+                    <div id="score-counter"></div>
             </section>
     </header>
         <main id="arena-container"></main>
