--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
             <section id="header-container">
                     <div>
-                        <button>Start Game</button>
+                        <button id="start-button">Start Game</button>
                     </div>
                     <div id="timer"></div>
                     <div id="score-counter"></div>
