Start button, game timer, score counter, end game screen all functional

--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
                     <div id="score-counter"></div>
             </section>
     </header>
-        <main id="arena-container"></main>
+        <main id="arena-container">
+            <div id="end-game-popup">
+                <h3>Game Over</h3>
+                    <p id="final-score"></p>
+                    <p>Refresh your browser to try again!</p>
+            </div>
+        </main>
     <footer>
         <section id="credits-container">
             <h2 id="credit-text">Created by Anthony Ghilardi</h2>
