--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Milestone Project One </title>
+    <title>Milestone Project One</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,21 +11,21 @@
         <div id="title-container">
             <h1 id="game-title">Coin Collector</h1>
         </div>
-            <section id="header-container">
-                    <div>
-                        <button id="start-button">Start Game</button>
-                    </div>
-                    <div id="timer"></div>
-                    <div id="score-counter"></div>
-            </section>
+        <div id="start-button-container">
+            <button id="start-button">Start Game</button>
+        </div>
+        <section id="header-container">
+            <div id="timer"></div>
+            <div id="score-counter"></div>
+        </section>
     </header>
-        <main id="arena-container">
-            <div id="end-game-popup">
-                <h3>Game Over</h3>
-                    <p id="final-score"></p>
-                    <p>Refresh your browser to try again!</p>
-            </div>
-        </main>
+    <main id="arena-container">
+        <div id="end-game-popup">
+            <h3>Game Over</h3>
+            <p id="final-score"></p>
+            <p>Refresh your browser to try again!</p>
+        </div>
+    </main>
     <footer>
         <section id="credits-container">
             <h2 id="credit-text">Created by Anthony Ghilardi</h2>
