Adjusted spacing with prettier

--- a/index.html
+++ b/index.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Milestone Project One</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <header>
-        <div id="title-container">
-            <h1 id="game-title">Meat Eater</h1>
-        </div>
-        <div id="start-button-container">
-            <button id="start-button">Start Game</button>
-        </div>
-        <section id="header-container">
-            <div id="timer"></div>
-            <div id="score-counter"></div>
-        </section>
+      <div id="title-container">
+        <h1 id="game-title">Meat Eater</h1>
+      </div>
+      <div id="start-button-container">
+        <button id="start-button">Start Game</button>
+      </div>
+      <section id="header-container">
+        <div id="timer"></div>
+        <div id="score-counter"></div>
+      </section>
     </header>
     <main id="arena-container">
-        <div id="end-game-popup">
-            <h3>Game Over</h3>
-            <p id="final-score"></p>
-            <p>Refresh your browser to try again!</p>
-        </div>
+      <div id="end-game-popup">
+        <h3>Game Over</h3>
+        <p id="final-score"></p>
+        <p>Refresh your browser to try again!</p>
+      </div>
     </main>
     <footer>
-        <section id="credits-container">
-            <h2 id="credit-text">Created by Anthony Ghilardi</h2>
-        </section>
+      <section id="credits-container">
+        <h2 id="credit-text">Created by Anthony Ghilardi</h2>
+      </section>
     </footer>
     <script src="app.js"></script>
-</body>
+  </body>
 </html>
