Added control inputs and stlying change

--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
       </section>
     </header>
     <main id="arena-container">
+      <div id="keyboard-inputs">
+        <img id="wasd-photo" src="./assets/wasd.jpg" alt="Picture of W, A, S, and D keys from https://www.javatpoint.com/what-are-wasd-keys">
+        <h4>Movement Inputs</h4>
+        <ul>
+          <li>W = Moves character Up</li>
+          <li>S = Moves character Down</li>
+          <li>A = Moves character Left</li>
+          <li>D = Moves character Right</li>
+          <li>Try combining inputs to <br>cause diagonal movement</li>
+        </ul>
+      </div>
       <div id="end-game-popup">
         <h3>Game Over</h3>
         <p id="final-score"></p>
@@ -28,6 +39,7 @@
     </main>
     <footer>
       <section id="credits-container">
+
         <h2 id="credit-text">Created by Anthony Ghilardi</h2>
       </section>
     </footer>
