--- a/index.html
+++ b/index.html
@@ -21,14 +21,18 @@
     </header>
     <main id="arena-container">
       <div id="keyboard-inputs">
-        <img id="wasd-photo" src="./assets/wasd.jpg" alt="Picture of W, A, S, and D keys from https://www.javatpoint.com/what-are-wasd-keys">
+        <img
+          id="wasd-photo"
+          src="./assets/wasd.jpg"
+          alt="Picture of W, A, S, and D keys from https://www.javatpoint.com/what-are-wasd-keys"
+        />
         <h4>Movement Inputs</h4>
         <ul>
           <li>W = Moves character Up</li>
           <li>S = Moves character Down</li>
           <li>A = Moves character Left</li>
           <li>D = Moves character Right</li>
-          <li>Try combining inputs to <br>cause diagonal movement</li>
+          <li>Try combining inputs to <br />cause diagonal movement</li>
         </ul>
       </div>
       <div id="end-game-popup">
@@ -39,7 +43,6 @@
     </main>
     <footer>
       <section id="credits-container">
-
         <h2 id="credit-text">Created by Anthony Ghilardi</h2>
       </section>
     </footer>
