--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div id="title-container">
-        <h1 id="game-title">Meat Eater</h1>
+        <h1 id="game-title">Hungry Hungry Dinosaur</h1>
       </div>
       <div id="start-button-container">
         <button id="start-button">Start Game</button>
